I solved the problem of the text that was not visible, now I can continue develop in peace

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body{
 
-    background: rgb(173, 66, 66);
+    background: black;
     color: white;
 }
 
